<resources>
    <string name="app_name">StreamPit</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="card_icon">Card Icon</string>
    <string name="add_new_card">Add New Card</string>
    <string name="title_activity_new_card">Add New Card</string>
    <string name="card_title">Card Title</string>
    <string name="choose_card_icon">Choose Card Icon</string>
    <string name="color_image_button">Color Image Button</string>
    <string name="choose_card_color">Choose Card Color</string>
    <string name="remove_card">Remove Card</string>
    <string name="card_removed_toast">Removed Card!</string>
    <string name="removing_cards_toast">Removing cards!</string>
    <string name="removing_cards_cancelled_toast">Removing cards cancelled</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="obs_ip_address">OBS IP Address</string>
    <string name="default_port">4444</string>
    <string name="obs_ip_port">OBS IP Port (Default: 4444)</string>
    <string name="first_run_toast">Please enter your streaming computer\'s IP address</string>
    <string name="no_ip_entered">Please enter a valid IP address first!</string>
    <string name="invalid_port_entered">Please enter a valid port number!</string>
    <string name="settings_saved">Settings saved</string>
    <string name="confirm_reset_all_cards">Reset cards</string>
    <string name="confirm_reset_all_cards_message">Do you really want to reset all cards to default? (THIS CANNOT BE UNDONE!)</string>
    <string name="reset_all_cards">Reset all cards to default</string>
    <string name="password">Please enter the password of the websocket</string>
    <string name="card_status_updated">Card status updated!</string>
    <string name="card_target">Please enter the name of the target</string>
    <string name="choose_target_of_card">Choose the target of the card</string>
    <string name="no_target_chosen">No target chosen!</string>
    <string name="no_target_required">No target required!</string>
</resources>
